feat: improve responsive

--- a/src/components/LoadoutRandomizer.astro
+++ b/src/components/LoadoutRandomizer.astro
@@ -60,7 +60,7 @@ const roomCode = url.searchParams.get('room')
 
     <div>
       <h2 class="label">Loadouts</h2>
-      <div id="loadouts" class="grid grid-cols-3 gap-4 h-fit" />
+      <div id="loadouts" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 h-fit" />
       <LoadoutCard />
     </div>
   )}
