feat: replace unocss with tailwindcss

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ import ThemeSwitcher from './ThemeSwitcher.astro'
 </div>
 
 <!-- top right corner -->
-<div class="bg-accent size-32 rotate-45 fixed top-12 right-0 translate-x-1/2 -translate-y-1/2 [&>div]:hover:block">
+<div class="bg-accent size-32 rotate-45 fixed top-12 right-0 translate-x-1/2 -translate-y-1/2 hover:[&>div]:block">
   <div class="hidden absolute top-full w-48 px-8 py-4 bg-dark -left-8">
     <HueSlider />
   </div>
