--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Header from '../components/Header.astro'
 import { c } from '../utils/classUtils'
+import '../styles/global.css'
 
 interface Props {
   title: string
