--- a/src/components/LoadoutCard.astro
+++ b/src/components/LoadoutCard.astro
@@ -10,7 +10,7 @@
         onclick="removePlayer('[publicId]')"
       />
       <div
-        class="i-material-symbols:refresh-sharp hidden size-7 text-accent admin-button cursor-pointer"
+        class="i-material-symbols:refresh hidden size-7 text-accent admin-button cursor-pointer"
         onclick="generatePlayer('[publicId]')"
       />
     </div>
