--- a/src/components/LoadoutRandomizer.astro
+++ b/src/components/LoadoutRandomizer.astro
@@ -50,7 +50,7 @@ const roomCode = url.searchParams.get('room')
           <h2 class="label">Map</h2>
 
           <div
-            class="i-material-symbols:refresh-sharp hidden size-4 text-accent adminOnly cursor-pointer"
+            class="i-material-symbols:refresh hidden size-4 text-accent adminOnly cursor-pointer"
             onclick="reloadMap()"
           />
         </div>
