--- a/src/components/ThemeSwitcher.astro
+++ b/src/components/ThemeSwitcher.astro
@@ -1,4 +1,4 @@
-<div id="theme-toggle" class="i-material-symbols:dark-mode p-1.5 size-8 cursor-pointer"></div>
+<div id="theme-toggle" class="i-material-symbols:dark-mode p-1.5 size-8 text-dark cursor-pointer"></div>
 
 <script>
   import { useCookie } from '../utils/cookieUtils'
